# digodoc-search-api

./: .gitignore  0+~  Makefile  Makefile.config  README.md  digodoc-indexer.opam  digodoc-search-api.opam  dune-project  search-api.opam  skeleton.opam
api/: openapi.json
config/: api_config.json  info.json
doc/: openapi.json
docs/: index.html
docs/api_lib@a0769f0c8093/Api/: index.html
docs/api_lib@a0769f0c8093/Api/MakeRegisterer/: index.html
docs/api_lib@a0769f0c8093/Api/MakeRegisterer/argument-1-S/: index.html
docs/api_lib@a0769f0c8093/Api/MakeRegisterer/argument-1-S/Args/: index.html
docs/api_lib@a0769f0c8093/Api/MakeRegisterer/argument-1-S/Errors/: index.html
docs/api_lib@a0769f0c8093/Api/MakeRegisterer/argument-2-H/: index.html
docs/api_lib@a0769f0c8093/Api/R/: index.html
docs/api_lib@a0769f0c8093/Handlers/: index.html
docs/config@a0769f0c8093/PConfig/: index.html
docs/db@a0769f0c8093/Db/: index.html
docs/db@a0769f0c8093/Db/Commands/: index.html
docs/db@a0769f0c8093/Db/Elements/: index.html
docs/db@a0769f0c8093/Db/Entries/: index.html
docs/db@a0769f0c8093/Db/Search/: index.html
docs/db@a0769f0c8093/Db_lwt/: index.html
docs/db@a0769f0c8093/Db_lwt/PGOCaml/: index.html
docs/db@a0769f0c8093/Misc_db/: index.html
docs/db@a0769f0c8093/Misc_db/Cond/: index.html
docs/db@a0769f0c8093/Monad_lwt/: index.html
docs/db_version@a0769f0c8093/Versions/: index.html
docs/digodoc-search-api/: index.html
docs/digodoc-search-api/Api/: index.html
docs/digodoc-search-api/Api/MakeRegisterer/: index.html
docs/digodoc-search-api/Api/MakeRegisterer/argument-1-S/: index.html
docs/digodoc-search-api/Api/MakeRegisterer/argument-1-S/Args/: index.html
docs/digodoc-search-api/Api/MakeRegisterer/argument-1-S/Errors/: index.html
docs/digodoc-search-api/Api/MakeRegisterer/argument-2-H/: index.html
docs/digodoc-search-api/Api/R/: index.html
docs/digodoc-search-api/Data_types/: index.html
docs/digodoc-search-api/Db/: index.html
docs/digodoc-search-api/Db/Commands/: index.html
docs/digodoc-search-api/Db/Elements/: index.html
docs/digodoc-search-api/Db/Entries/: index.html
docs/digodoc-search-api/Db/Search/: index.html
docs/digodoc-search-api/Db_lwt/: index.html
docs/digodoc-search-api/Db_lwt/PGOCaml/: index.html
docs/digodoc-search-api/Encoding/: index.html
docs/digodoc-search-api/Handlers/: index.html
docs/digodoc-search-api/Misc/: index.html
docs/digodoc-search-api/Misc_db/: index.html
docs/digodoc-search-api/Misc_db/Cond/: index.html
docs/digodoc-search-api/Monad_lwt/: index.html
docs/digodoc-search-api/PConfig/: index.html
docs/digodoc-search-api/Services/: index.html
docs/digodoc-search-api/Services/Args/: index.html
docs/digodoc-search-api/Services/Errors/: index.html
docs/digodoc-search-api/Utils/: index.html
docs/digodoc-search-api/UtilsEncoding/: index.html
docs/digodoc-search-api/UtilsEncoding/PathSegment/: index.html
docs/digodoc-search-api/Versions/: index.html
docs/misc@a0769f0c8093/Misc/: index.html
scripts/: api.service  api.sh  digodoc_search.service
src/: dune
src/api/: api.ml  api_server.ml  build.ocp2  doc.ml  dune  encoding.ml  encoding.mli  handlers.ml  index.ml  openapi.ml  services.ml
src/common/: data_types.ml  dune  utils.ml  utilsConversion.ml  utilsEncoding.ml  utilsParsing.ml
src/db/: db.ml  dune  misc_db.ml  versions.ml
src/db/db-update/: db_updater.ml  dune
src/ui/: dune  request.ml
www/: index.html  script.js
