(rule
 (action
  (write-file pConfig.ml
   "let project = \"%{env:PROJECT_NAME=}\"
let database = \"%{env:PGDATABASE=}\"
let digodoc_dir = \"%{env:DIGODOC_DIR=}\"
let api_host = \"%{env:API_HOST=}\"
let api_port = %{env:API_PORT=}")))

(library
 (name project_config)
 (public_name search-api.project_config)
 (wrapped false)
 (modules pConfig))
