(rule
 (action
  (write-file pConfig.ml
"(** Server configuration *)

let database = \"%{env:PGDATABASE=}\"
(** Database name *)

let digodoc_dir = \"%{env:DIGODOC_DIR=}\"
(** Digodoc's generated directory *)

let api_port = %{env:API_PORT=}
(** Api port *)")))

(library
 (name config)
 (wrapped false)
 (modules pConfig))
