(library
 (name api_services)
 (wrapped false)
 (modules encoding services)
 (preprocess (pps ppx_deriving_encoding))
 (libraries ez_api data_common))

(library
 (name api_lib)
 (wrapped false)
 (modules handlers api)
 (libraries ez_api.server api_services db_lwt)
 (preprocess (pps lwt_ppx)))

(executable
 (name api_server)
 (modules api_server)
 (libraries api_lib))

(executable
 (name openapi)
 (modules openapi doc)
 (libraries api_lib ez_api.openAPI))
