(library
 (name api_services)
 (public_name digodoc-search-api.services)
 (wrapped false)
 (modules encoding services)
 (preprocess (pps ppx_deriving_encoding))
 (libraries ez_api ez_subst data_common utils ))

(library
 (name api_lib)
 (wrapped false)
 (modules handlers api)
 (libraries ez_search ez_file ez_api.server api_services db)
 (preprocess (pps lwt_ppx)))

(executable
 (name api_server)
 (modules api_server)
 (libraries api_lib))

(executable
 (name openapi)
 (modules openapi)
 (libraries api_lib ez_api.openAPI))
