(library
 (name misc)
 (modules misc)
 (libraries project_config stdlib-shims))

(library
 (name data_common)
 (public_name search-api.data_common)
 (wrapped false)
 (modules data_types))

(library
 (name utils)
 (public_name search-api.utils)
 (wrapped false)
 (libraries data_common uri ez_subst)
 (modules utils utilsConversion))