(library
 (name misc)
 (modules misc)
 (libraries config stdlib-shims))

(library
 (name data_common)
 (public_name digodoc-search-api.data_common)
 (wrapped false)
 (modules data_types))

(library
 (name utils)
 (public_name digodoc-search-api.utils)
 (wrapped false)
 (libraries data_common uri ez_subst)
 (modules utils utilsEncoding))