(library
 (name db_version)
 (public_name digodoc-search-api.db-version)
 (modules versions)
 (wrapped false)
 (preprocess (pps pgocaml_ppx))
 (libraries ez_pgocaml misc))

(library
 (name db)
 (public_name digodoc-search-api.db)
 (wrapped false)
 (modules misc_db monad_lwt db_lwt db)
 (libraries lwt.unix pgocaml data_common db_version)
 (preprocessor_deps (env_var PGDATABASE))
 (preprocess (pps pgocaml_ppx lwt_ppx)))
